Bug #18518 embedded library crashes starting
Submitted: 26 Mar 2006 15:19 Modified: 22 May 2006 20:31
Reporter: Alexey Botchkov
Status: Closed
Category:libmysqld Severity:S2 (Serious)
Version:5.1 OS:Linux (Linux)
Assigned to: Alexey Botchkov Target Version:

[26 Mar 2006 15:19] Alexey Botchkov
Description:
embedded-server mysql_server_init call crashes the application

How to repeat:
run libmysqld/examples/mysql
[24 Apr 2006 16:26] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/5407
[26 Apr 2006 10:11] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/5551
[18 May 2006 15:34] Paul DuBois
The description in the bug report mentions
mysql_server_init(), but that function seems not
to be changed by the patch. What is the actual
problem (what was fixed)?  Thanks.
[22 May 2006 20:31] Paul DuBois
Noted in 5.1.11 changelog.

The embedded server crashed with row-based replication enabled.