bug #18518 (embedded server crashes starting) The problem is that now server works properly only with the row-based replication